--- a/data/paste.html
+++ b/data/paste.html
@@ -15,6 +15,19 @@
         width:80vw;
         max-width:10cm;
       }
+      @media (prefers-color-scheme: dark){
+        body {
+          background-color:#121212;
+        }
+        form {
+          opacity:12%;
+        }
+        .inp {
+          <!-- color:white; -->
+          opacity:100%;
+        }
+      }
+      @media not (prefers-color-scheme: dark){ }
     </style>
   </head>
   <body>
